lintian (2.5.45) UNRELEASED; urgency=medium

  XXX: generate tag summary with private/generate-tag-summary

  * commands/reporting-lintian-harness.pm:
    + [NT] Re-enable pedantic tags by default.  These were
      disabled in the previous release by mistake.

  * debian/rules:
    + [JW] Put "Debian Package Checker" in all manpage headers.
    + [JW] Put Lintian version in all manpage footers.
    + [JW] Simplify manpage generation.

 -- Niels Thykier <niels@thykier.net>  Sun, 24 Apr 2016 07:16:45 +0000

lintian (2.5.44) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - build-depends-arch-without-arch-dependant-binary
      - changelog-references-temp-security-identifier
      - ctrl-script
      - debian-build-system
      - debian-changelog-has-wrong-day-of-week
      - extra-whitespace-around-name-in-changelog-trailer
      - invalid-versioned-provides
      - maintscript-calls-ldconfig
      - no-ctrl-scripts
      - package-has-unnecessary-activation-of-ldconfig-trigger
      - package-must-activate-ldconfig-trigger
      - source-format
    + Removed:
      - debian-changelog-has-wrong-weekday
      - description-contains-duplicated-word
      - dh_pysupport-is-obsolete
      - missing-dependency-on-python-support
      - postinst-has-useless-call-to-ldconfig
      - postinst-must-call-ldconfig
      - postrm-has-useless-call-to-ldconfig
      - postrm-should-call-ldconfig
      - postrm-unsafe-ldconfig
      - preinst-calls-ldconfig
      - prerm-calls-ldconfig
      - versioned-provides

  * checks/changelog-file.{desc,pm}:
    + [JW,NT] Use "day of week" rather than "weekday".
      (Closes: #796093)
    + [JW,NT] Flag references to "TEMP" security identifiers.
      Thanks to Paul Wise for assisting with the regex.
      (Closes: #807892)
  * checks/control-files.{desc,pm}:
    + [NT] Add classification tags for (absence of) maintscripts.
  * checks/debhelper.{desc,pm}:
    + [NT] Add tag for classifying the build system.