@@ -1,0 +1,1 @@
+C: scripts-maintainer-script-classification: debhelper-autoscript-in-maintainer-scripts dh_fake_lintian_tool
